--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,44 @@
 /*RESET STYLES*/
 * {
     box-sizing: border-box;
+    text-transform: capitalize;
 }
 
+/*GLOBAL STYLES*/
+html {
+    font-family: helvetica, arial;
+    font-size: 22px;
+    color:seashell;
+    background-color:black;
+    opacity:0.9;
+    text-align: center;
+}
+
+/*NAVIGATION BAR STYLES*/
+header {
+    display:flex;
+    justify-content:space-between;
+    width:100%;
+    position:fixed;
+    margin: 0 10px;
+    border-bottom: 1px solid seashell;
+    z-index: 10;
+}
+
+nav {
+    display:flex;
+    justify-content:center;
+}
+
+nav ul {
+    display:flex;
+    justify-content:space-between;
+    margin:0;
+}
+nav ul li{
+    text-decoration: underline;
+    list-style-type: none;
+    margin: 1em .5em;
+}
 
 
