--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /*RESET STYLES*/
 * {
     box-sizing: border-box;
-    text-transform: capitalize;
 }
 
 /*GLOBAL STYLES*/
@@ -12,8 +11,12 @@ html {
     background-color:rgb(0, 0, 0);
     opacity:0.9;
     text-align: center;
+    line-height: 1;
 }
 
+header, main {
+    text-transform: capitalize;
+}
 /*NAVIGATION BAR STYLES*/
 header {
     display:flex;
@@ -27,10 +30,15 @@ header {
     flex-wrap:wrap;
 }
 
+header img {
+    height:50px;
+    margin: 10px 0;
+}
 nav {
     display:flex;
     justify-content:center;
     flex-wrap:wrap;
+
 }
 
 nav ul {
@@ -38,13 +46,13 @@ nav ul {
     justify-content:space-around;
     flex-wrap:wrap;
     align-items:center;
-    align-content: space-between;
     margin:0;
+    padding:0px;
 }
 nav ul li{
     text-decoration: underline;
     list-style-type: none;
-    margin: 1em .5em;
+    margin: 15px 10px;
 }
 
 nav a:hover {
@@ -56,15 +64,18 @@ nav a:visited, a:link {
 }
 
 
-main {
+main,footer {
     position: relative;
     top: 70px;
 }
 
-@media only screen and (max-width:371px) {
+@media only screen and (max-width:481px) {
     main {
         position: relative;
-        top: 190px;
+        top: 92px;
+    }
+    header {
+        justify-content:center;
     }
 }
 
@@ -75,7 +86,7 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    width: 90%;
+    width: 99%;
     height:50%;
     margin: auto;
     display:flex;
@@ -85,36 +96,76 @@ main {
 
 
 .mission {
-    background-color: rgba(0, 0, 0, 0.534);
+    background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
+    line-height: 19px;
 }
 
-.mission h2 {
-    line-height:.2em;
-
-
-}
 
 /*Tea types*/
-
+.tea-of-month{
+    line-height: .7;
+    padding: 20px 0;
+}
 .tea-container {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: space-around;
+    width:70%;
+    margin: auto;
 }
 
 .tea-container figure {
-    width:300px;
-    height:200px;
-    padding:0px;
-    
+    padding: 20px 10px;
+    margin:0;
 }
 
 figure img {
+    width:300px;
+    height:200px;
     display: block;
-    width: 100%;
+    border-radius: 10%;
 }
 
 figure figcaption {
     margin-top:10px;
+}
+
+
+/*location section */
+.location {
+    width: 100%;
+    min-height: 500px;
+    background: url(../images/img-locations-background.jpg) no-repeat center fixed;
+    display:flex;
+    flex-flow:column;
+    justify-content: center;
+}
+
+.location-container{
+    display:flex;
+    justify-content:space-around;
+    flex-flow: row wrap;
+    align-items: center;
+    width:70%;
+    margin:0 auto;
+}
+
+.location-container div {
+    background:rgba(0, 0, 0, 0.6);
+    width:300px;
+    height:230px;
+    margin:10px;
+    border-radius: 10%;
+    -webkit-border-radius: 10%;
+    -moz-border-radius: 10%;
+    -ms-border-radius: 10%;
+    -o-border-radius: 10%;
+}
+
+/*footer*/
+
+footer>p {
+    font-size:.7em;
+    text-align: left;
 }
