--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,8 @@ header {
     display:flex;
     justify-content:space-between;
     width:100%;
+    padding: 0 18%;
     position:fixed;
-    padding:0 10px;
     border-bottom: 1px solid seashell;
     z-index: 10;
     background-color: black;
@@ -72,6 +72,7 @@ main,footer {
 @media only screen and (max-width:481px) {
     header {
         justify-content:center;
+        padding: 0;
     }
 }
 
